# PINNMirai

./: LICENSE  README.md  pyproject.toml
configs/: experiment.yaml
data/: README.md
data/processed/: target.csv
docs/: battery_and_data.md  model_and_fusion.md  testing.md
scripts/: prepare_excel.py  train_fused.py
src/mirai_pinn/: __init__.py  data.py  models.py  physics.py  training.py
tests/: test_data.py  test_fusion.py  test_physics.py
